--- a/BDD/behatclean/build.xml
+++ b/BDD/behatclean/build.xml
@@ -3,6 +3,26 @@
    <mkdir dir="${basedir}/report"/>
    <target name="behat">
     <exec dir="${basedir}" executable="behat" failonerror="true">
+     <arg line="-f junit --out ${basedir}/report"/>
+    </exec>
+   </target>
+   <target name="selenium">
+    <exec dir="${basedir}" executable="behat" failonerror="true">
+     <arg line="-c selenium.yml -f junit --out ${basedir}/report"/>
+    </exec>
+   </target>
+   <target name="webdriver">
+    <exec dir="${basedir}" executable="behat" failonerror="true">
+     <arg line="-c webdriver.yml -f junit --out ${basedir}/report"/>
+    </exec>
+   </target>
+   <target name="sahi">
+    <exec dir="${basedir}" executable="behat" failonerror="true">
+     <arg line="-c sahi.yml -f junit --out ${basedir}/report"/>
+    </exec>
+   </target>
+   <target name="sauce">
+    <exec dir="${basedir}" executable="behat" failonerror="true">
      <arg line="-c sauce.yml -f junit --out ${basedir}/report"/>
     </exec>
    </target>
