--- a/build.xml
+++ b/build.xml
@@ -4,6 +4,11 @@
      <arg line="-f junit --out ${basedir}/report"/>
     </exec>
    </target>
+   <target name="sauceTests">
+    <exec dir="${basedir}" executable="behat" failonerror="true">
+     <arg line="-c sauce.yml -f junit --out ${basedir}/report"/>
+    </exec>
+   </target>
    <target name="seleniumTests" description="Start Server ;  stop Server">
        <delete dir="${basedir}/report" />
        <mkdir dir="${basedir}/report"/>
@@ -15,6 +20,23 @@
                   <http url="http://localhost:4444/selenium-server/driver/?cmd=testComplete"/>
               </waitfor>
                   <antcall target="selenium"></antcall>
+                  <antcall target="create-test-report"></antcall>
+                  <antcall target="stop-server"></antcall>
+          </sequential>
+      </parallel>
+   </target>
+   
+   <target name="webdriverTests" description="Start Server ;  stop Server">
+       <delete dir="${basedir}/report" />
+       <mkdir dir="${basedir}/report"/>
+      <parallel>
+          <antcall target="start-selenium-server"></antcall>
+          <sequential>
+              <echo taskname="waitfor" message="Wait for selenium server launch" />
+              <waitfor maxwait="2" maxwaitunit="minute" checkevery="100">
+                  <http url="http://localhost:4444/selenium-server/driver/?cmd=testComplete"/>
+              </waitfor>
+                  <antcall target="webdriver"></antcall>
                   <antcall target="create-test-report"></antcall>
                   <antcall target="stop-server"></antcall>
           </sequential>
@@ -48,7 +70,7 @@
      <arg line="-c webdriver.yml -f junit --out ${basedir}/report"/>
     </exec>
    </target>
-   <target name="sahi" depends="start-sahi-server">
+   <target name="sahi">
     <exec dir="${basedir}" executable="behat" failonerror="true">
      <arg line="-c sahi.yml -f junit --out ${basedir}/report"/>
     </exec>
