--- a/build.xml
+++ b/build.xml
@@ -5,9 +5,20 @@
     </exec>
    </target>
    <target name="runSauce">
-    <exec dir="${basedir}" executable="behat" failonerror="true">
-     <arg line="-c sauce.yml -f junit --out ${basedir}/report"/>
-    </exec>
+     <delete dir="${basedir}/report" />
+       <mkdir dir="${basedir}/report"/>
+      <parallel>
+          <antcall target="start-selenium-server"></antcall>
+          <sequential>
+              <echo taskname="waitfor" message="Wait for selenium server launch" />
+              <waitfor maxwait="2" maxwaitunit="minute" checkevery="100">
+                  <http url="http://localhost:4444/selenium-server/driver/?cmd=testComplete"/>
+              </waitfor>
+                  <antcall target="sauce"></antcall>
+                  <antcall target="create-test-report"></antcall>
+                  <antcall target="stop-server"></antcall>
+          </sequential>
+      </parallel>
    </target>
    <target name="runSelenium" description="Start Server ;  stop Server">
        <delete dir="${basedir}/report" />
